force-app/main/default/objects/Registration__c/fields/RegisteringCourse__c.field-meta.xml
<CustomField>
    <fullName>RegisteringCourse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RegisteringCourse</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Registrations</relationshipLabel>
    <relationshipName>Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>