force-app/main/default/objects/Registration__c/fields/RegisteringStudent__c.field-meta.xml
<CustomField>
    <fullName>RegisteringStudent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RegisteringStudent</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Registrations</relationshipLabel>
    <relationshipName>Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>