force-app/main/default/objects/Registration__c/fields/RegistrationEmail__c.field-meta.xml
<CustomField>
    <fullName>RegistrationEmail__c</fullName>
    <label>RegistrationEmail</label>
    <type>Email</type>
</CustomField>