force-app/main/default/objects/Registration__c/validationRules/RegistrationDate_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>RegistrationDate_rules</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    (YEAR( TODAY() ) -  YEAR( RegisteringStudent__r.BirthDate__c  ) &lt; 15),
    RegistrationDate__c  &gt;  TODAY() ,
    RegistrationDate__c  &lt; RegisteringStudent__r.BirthDate__c
)</errorConditionFormula>
    <errorDisplayField>RegistrationDate__c</errorDisplayField>
    <errorMessage>BirthDate must be 15 years above from today.</errorMessage>
</ValidationRule>