force-app/main/default/objects/Registration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RegisteringCourse__c</columns>
    <columns>RegisteringStudent__c</columns>
    <columns>RegistrationDate__c</columns>
    <columns>RegistrationEmail__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>